2010-12-09  Antonio Gomes  <agomes@rim.com>

        Reviewed by Martin Robinson.

        [Gtk] Populate DumpRenderTreeSupportGtk (part IV)
        https://bugs.webkit.org/show_bug.cgi?id=48429

        Adjust call sites of webkit_thread_count to use the DumpRenderTreeSupportGtk version now.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::workerThreadCount):

2010-12-06  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Support the Mozilla-style Fullscreen Javascript API
        https://bugs.webkit.org/show_bug.cgi?id=50572

        Enable the Javascript Fullscreen support in the GtkLauncher. Also
        make DRT update the Chrome when the WebView settings have been
        reset to consistent values.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):
        * GtkLauncher/main.c:
        (create_window):
        * Scripts/build-webkit:

2010-12-09  Koan-Sin Tan  <koansin.tan@gmail.com>

        Reviewed by Tor Arne Vestbø

        [Qt] run-launcher doesn't start the browser on Mac OS X 10.6
        https://bugs.webkit.org/show_bug.cgi?id=50742

        check not only QtWebKit.framework/QtWebKit but also libQtWebKit.dylib

        * Scripts/webkitdirs.pm:

2010-12-09  Joone Hur  <joone@kldp.org>

         Reviewed by Martin Robinson.

         [GTK] Support for viewport meta tag
         https://bugs.webkit.org/show_bug.cgi?id=45443

         Add support for testing the viewport properties for WebKitGtk.

         * DumpRenderTree/LayoutTestController.cpp:
         (dumpConfigurationForViewportCallback): Added this JS callback to set the size of the visible viewport.
         (LayoutTestController::staticFunctions):
         * DumpRenderTree/LayoutTestController.h:
         * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
         (LayoutTestController::dumpConfigurationForViewport): Added this function to test the viewport properties.